# wickedengine-modules-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WickedEngine.cppm  WickedEngineModuleExample.cppm  main_SDL2.cpp  sdl2.cppm
Assets/: spaceship.wiscene  spaceship2.wiscene
